Spring Security & JWT added