@@ -1,13 +1,16 @@
 package com.my.mvc.project.mymvcproject.security;
 
-import java.util.Collections;
+import java.util.List;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
+import com.my.mvc.project.mymvcproject.exceptions.UserNotRegisteredDetailsException;
+import com.my.mvc.project.mymvcproject.exceptions.UserNotValidException;
 import com.my.mvc.project.mymvcproject.service.UserService;
 
 import lombok.RequiredArgsConstructor;
@@ -16,21 +19,19 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class AuthenticationUserDetailService implements UserDetailsService {
     private final UserService userService;
-    private final com.my.mvc.project.mymvcproject.service.UserDetailsService detService;
+    private final com.my.mvc.project.mymvcproject.service.UserDetailsService userDetailsService;
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        com.my.mvc.project.mymvcproject.model.User user = userService.getByUsername2(username);
-        if (user == null) {
-            throw new UsernameNotFoundException(username);
-        }
-        com.my.mvc.project.mymvcproject.model.UserDetails userDetail;
         try {
-            userDetail = detService.loadUserByUsername(username);
-            return new User(userDetail.getUsername(),
-                    userDetail.getPassword(),
-                    Collections.emptyList());
-        } catch (Exception e) {
+            var user = userService.getByUsername2(username);
+            if (user == null) {
+                throw new UsernameNotFoundException(username);
+            }
+            var details = userDetailsService.getUserDetails(username);
+            var gauth = new SimpleGrantedAuthority(user.getUserType().getValue());
+            return new User(username, details.getPassword(), List.of(gauth));
+        } catch (UserNotValidException | UserNotRegisteredDetailsException e) {
             throw new UsernameNotFoundException(username);
         }
     }
